# rdkservices

./: .cd  .gitignore  0001-XRE-16967-Update-TextToSpeech-Implementation.patch  1  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  May sample  NOTICE  PR  README.md  TataElxsi.html  amlogic.cmake  bingo  broadcom.cmake  buildrdkservies.sh  cov_build.sh  demo.html  demofile  fiza  fstest  gitsample  intel.cmake  kgf  l1tests.cmake  l2tests.cmake  lasttest  lgi.cmake  nokia  oneplus  oreo  patch  raspberrypi.cmake  rdk-jenkins  realtek.cmake  sampl2  sample  sample git  sample.html  (+8 more)
AVInput/: .AVInput.cpp.swo  AVInput.conf.in  AVInput.config  AVInput.cpp  AVInput.h  AVInput.json  AVInputPlugin.json  CHANGELOG.md  CMakeLists.txt  Module.h  README.md  Utils.cpp  Utils.h  hdmiIn.cpp  hdmiIn.hpp
AVOutput/: ':w  :w  AVOutput.conf.in  AVOutput.config  AVOutput.cpp  AVOutput.h  AVOutput.json  AVOutputBase.cpp  AVOutputBase.h  AVOutputCommon.h  AVOutputPlugin.json  AVOutputSTB.cpp  AVOutputSTB.h  AVOutputTV.cpp  AVOutputTV.h  AVOutputTVHelper.cpp  AVOutputTVPrivateAPIs.cpp  CHANGELOG.md  CMakeLists.txt  Module.cpp  Module.h  iniParser.h
Analytics/: Analytics.conf.in  Analytics.config  Analytics.cpp  Analytics.h  Analytics.json  AnalyticsJsonRpc.cpp  AnalyticsPlugin.json  CHANGELOG.md  CMakeLists.txt  IAnalytics.h  Module.h
AppManager/: AppManager.conf.in  AppManager.config  AppManager.cpp  AppManager.h  AppManagerImplementation.cpp  AppManagerImplementation.h  CMakeLists.txt  EventListener.h  Module.cpp  Module.h  RDKShellAdapter.cpp  RDKShellAdapter.h  RDKShellAdapterUtils.cpp  RDKShellAdapterUtils.h  README.md  WebSocket.cpp  WebSocket.h
CloudStore/: CHANGELOG.md  CMakeLists.txt  CloudStore.conf.in  CloudStore.config  CloudStore.cpp  CloudStore.h  CloudStoreImplementation.cpp  CloudStoreImplementation.h  CloudStorePlugin.json  Module.cpp  Module.h
CoPilot/: CMakeLists.txt  CoPilot.config  CoPilot.cpp  CoPilot.h  CoPilot.json  README.md
ContinueWatching/: CHANGELOG.md  CMakeLists.txt  ContinueWatching.conf.in  ContinueWatching.config  ContinueWatching.cpp  ContinueWatching.h  ContinueWatching.json  ContinueWatchingPlugin.json  Module.h  README.md
DTV/: CHANGELOG.md  CMakeLists.txt  DTV.conf.in  DTV.config  DTV.cpp  DTV.h  DTV.json  DTVImpl.cpp  DTVImpl.h  DTVJsonRpc.cpp  DTVPlugin.json  Module.h
DataCapture/: CHANGELOG.md  CMakeLists.txt  DataCapture.conf.in  DataCapture.config  DataCapture.cpp  DataCapture.h  DataCapture.json  DataCapturePlugin.json  Module.h  README.md  Utils.h  socket_adaptor.cpp  socket_adaptor.h
DeviceDiagnostics/: CHANGELOG.md  CMakeLists.txt  DeviceDiagnostics.conf.in  DeviceDiagnostics.config  DeviceDiagnostics.cpp  DeviceDiagnostics.h  DeviceDiagnostics.json  DeviceDiagnosticsPlugin.json  Module.h  README.md  Utils.h
DeviceIdentification/: CHANGELOG.md  CMakeLists.txt  DeviceIdentification.conf.in  DeviceIdentification.config  DeviceIdentification.cpp  DeviceIdentification.h  DeviceIdentification.json  DeviceIdentificationJsonRpc.cpp  DeviceIdentificationPlugin.json  Module.h
DeviceInfo/: .gitignore  CHANGELOG.md  CMakeLists.txt  DeviceCapabilities.cpp  DeviceCapabilities.h  DeviceInfo.conf.in  DeviceInfo.config  DeviceInfo.cpp  DeviceInfo.h  DeviceInfo.json  DeviceInfo.vcxproj  DeviceInfoImplementation.cpp  DeviceInfoImplementation.h  DeviceInfoJsonRpc.cpp  DeviceInfoPlugin.json  FirmwareVersion.cpp  FirmwareVersion.h  IdentityProvider.h  Module.h
DisplayInfo/: CHANGELOG.md  CMakeLists.txt  DisplayInfo.conf.in  DisplayInfo.config  DisplayInfo.cpp  DisplayInfo.h  DisplayInfo.json  DisplayInfo.vcxproj  DisplayInfo.vcxproj.filters  DisplayInfoJsonRpc.cpp  DisplayInfoPlugin.json  DisplayInfoTracing.h  ExtendedDisplayIdentification.h  Module.h
FireboltPrivacy/: CMakeLists.txt  FireboltPrivacy.conf.in  FireboltPrivacy.config  FireboltPrivacy.cpp  FireboltPrivacy.h  FireboltPrivacyImplementation.cpp  FireboltPrivacyJsonRpc.cpp  FireboltPrivacyPlugin.json  Module.h
FrameRate/: CHANGELOG.md  CMakeLists.txt  FrameRate.conf.in  FrameRate.config  FrameRate.cpp  FrameRate.h  FrameRate.json  FrameRatePlugin.json  Module.h  README.md
HdcpProfile/: CHANGELOG.md  CMakeLists.txt  HdcpProfile.conf.in  HdcpProfile.config  HdcpProfile.cpp  HdcpProfile.generated.json  HdcpProfile.h  HdcpProfile.json  HdcpProfilePlugin.json  Module.h  README.md
HdmiInput/: CHANGELOG.md  CMakeLists.txt  HdmiInput.conf.in  HdmiInput.config  HdmiInput.cpp  HdmiInput.h  HdmiInput.json  HdmiInputPlugin.json  Module.h  README.md
IOTControl/: AvahiClient.cpp  AvahiClient.h  CMakeLists.txt  IOTConnector.cpp  IOTConnector.h  IOTControl.config  IOTControl.cpp  IOTControl.h  IOTControl.json  IOTControlPlugin.json  Module.cpp  Module.h
LgiDisplaySettings/: CMakeLists.txt  LgiDisplaySettings.config  LgiDisplaySettings.cpp  LgiDisplaySettings.h  LgiDisplaySettings.json  LgiDisplaySettingsPlugin.json  Module.h  README.md  tr181api.h
LgiHdcpProfile/: CMakeLists.txt  LgiHdcpProfile.config  LgiHdcpProfile.cpp  LgiHdcpProfile.h  LgiHdcpProfile.json  LgiHdcpProfilePlugin.json  Module.h  README.md
LgiNetwork/: CHANGELOG.md  CMakeLists.txt  NetUtilsNetlink.cpp  Network.config  Network.cpp  Network.h  Network.json  NetworkPlugin.json  NetworkTraceroute.cpp  PingNotifier.cpp  README.md
LgiSystemServices/: CMakeLists.txt  LgiSystem.json  LgiSystemPlugin.json  LgiSystemServices.config  LgiSystemServices.cpp  LgiSystemServices.h  Module.h  SystemServicesHelper.cpp  SystemServicesHelper.h
LgiTextToSpeech/: CMakeLists.txt  ILgiTextToSpeech.h  ITextToSpeech.h  LgiTextToSpeech.config  LgiTextToSpeech.cpp  LgiTextToSpeech.h  LgiTextToSpeech.json  LgiTextToSpeechImplementation.cpp  LgiTextToSpeechImplementation.h  LgiTextToSpeechJsonRpc.cpp  LgiTextToSpeechPlugin.json  Module.h  ProxyStubs_LgiTextToSpeech.cpp  ProxyStubs_TextToSpeech.cpp  TextToSpeech.cpp  TextToSpeech.json  TextToSpeechImplementation.cpp  TextToSpeechImplementation.h
LocationSync/: .gitignore  CHANGELOG.md  CMakeLists.txt  LocationService.cpp  LocationService.h  LocationSync.conf.in  LocationSync.config  LocationSync.cpp  (+9 more)
(+2492 files in other folders)
